# django-sendinblue

./: LICENSE  README.md  requirements.txt  settings.py  setup.cfg  setup.py  test_requirements.txt
django_sendinblue/: backend.py
