[metadata]
description-file = README.md
[bdist_wheel]
universal = 1

[coverage:run]
omit =
  docs

[flake8]
exclude = bin/,include/,lib/,.git/,*/migrations/*,build/,dist/,.tox/
max-line-length = 119
max-complexity = 10

[isort]
line_length=119
default_section=THIRDPARTY
import_heading_firstparty=our stuff

[tool:pytest]
DJANGO_SETTINGS_MODULE=testsettings
python_files=test*.py
